--- a/Electric_Meter/MVVM/Views/DashboardView.xaml
+++ b/Electric_Meter/MVVM/Views/DashboardView.xaml
@@ -8,38 +8,7 @@
              mc:Ignorable="d"
              d:DesignHeight="660" d:DesignWidth="1120">
 
-    <UserControl.Resources>
-        <Style x:Key="ActionButtonStyle" TargetType="Button">
-            <Setter Property="Padding" Value="8 4"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-            <Setter Property="Cursor" Value="Hand"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}"
-                                CornerRadius="5"
-                                Padding="{TemplateBinding Padding}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
 
-        <Style x:Key="TitleTextBlockStyle" TargetType="TextBlock">
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-            <Setter Property="Foreground" Value="#333"/>
-        </Style>
-        <Style x:Key="InfoTextBlockStyle" TargetType="TextBlock">
-            <Setter Property="Foreground" Value="{StaticResource TextColorPrimary}"/>
-            <Setter Property="FontSize" Value="12"/>
-        </Style>
-        <DropShadowEffect x:Key="CardDropShadow" ShadowDepth="1" Direction="270" Color="#CCCCCC" Opacity="0.5" BlurRadius="5"/>
-
-    </UserControl.Resources>
 
     <Border CornerRadius="10" Background="#F0F2F5" Effect="{StaticResource CardDropShadow}">
         <Grid Margin="20">
@@ -60,7 +29,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Border Grid.Row="0" Grid.Column="0" Background="{StaticResource BackgroundPrimaryColor}" CornerRadius="10" Margin="0 0 10 10" Effect="{StaticResource CardDropShadow}">
+                <Border Grid.Row="0" Grid.Column="0"  CornerRadius="10" Margin="0 0 10 10" Effect="{StaticResource CardDropShadow}">
                     <StackPanel Margin="15">
                         <Grid Margin="0 0 0 10">
                             <Grid.ColumnDefinitions>
@@ -68,11 +37,11 @@
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding ChartBarText}" Style="{StaticResource TitleTextBlockStyle}" HorizontalAlignment="Left"/>
-                            <TextBlock Grid.Column="1" Text="{Binding YearText}" Style="{StaticResource InfoTextBlockStyle}" VerticalAlignment="Center" Margin="0 0 5 0"/>
+                            <TextBlock Text="{Binding ChartBarText}"  HorizontalAlignment="Left"/>
+                            <TextBlock Grid.Column="1" Text="{Binding YearText}" VerticalAlignment="Center" Margin="0 0 5 0"/>
                             <ComboBox Grid.Column="2" ItemsSource="{Binding LstYearBarChart}"
                                         SelectedItem="{Binding SelectedYearBarChart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                        Foreground="{StaticResource TextColorPrimary}"
+                                        
                                         Height="32"
                                         VerticalContentAlignment="Center"
                                         Padding="10,0,10,0"
@@ -83,14 +52,14 @@
                             <lvc:CartesianChart.AxisX>
                                 <lvc:Axis 
                                     LabelFormatter="{Binding ChartBarFormatter}"  
-                                    Foreground="{StaticResource TextColorPrimary}" 
+                                     
                                     FontWeight="SemiBold"/>         
                             </lvc:CartesianChart.AxisX>
 
                             <lvc:CartesianChart.AxisY>
                                 <lvc:Axis 
                                     Labels="{Binding LstChartBarLabels}"                                   
-                                    Foreground="{StaticResource TextColorPrimary}" 
+                                     
                                     FontWeight="SemiBold" />
                             </lvc:CartesianChart.AxisY>
 
@@ -98,7 +67,7 @@
                     </StackPanel>
                 </Border>
 
-                <Border Grid.Row="0" Grid.Column="1" Background="{StaticResource BackgroundPrimaryColor}" CornerRadius="10" Margin="10 0 0 10" Effect="{StaticResource CardDropShadow}">
+                <Border Grid.Row="0" Grid.Column="1" CornerRadius="10" Margin="10 0 0 10" Effect="{StaticResource CardDropShadow}">
 
                     <StackPanel Margin="15">
                         <Grid>
@@ -109,20 +78,20 @@
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding ChartColumnText}" Style="{StaticResource TitleTextBlockStyle}" Margin="0 0 0 10"/>
-                            <TextBlock Grid.Column="1" Text="{Binding MonthText}" Style="{StaticResource InfoTextBlockStyle}" VerticalAlignment="Center" Margin="0 0 5 0"/>
+                            <TextBlock Text="{Binding ChartColumnText}"  Margin="0 0 0 10"/>
+                            <TextBlock Grid.Column="1" Text="{Binding MonthText}" VerticalAlignment="Center" Margin="0 0 5 0"/>
                             <ComboBox Grid.Column="2"
 						      ItemsSource="{Binding LstMonthColumnChart}"
 						      SelectedItem="{Binding SelectedMonthColumnChart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-						      Foreground="{StaticResource TextColorPrimary}"
+						      
 						      Height="32"
 						      VerticalContentAlignment="Center"
 						      Padding="10,0,10,0"
 						      HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
-                            <TextBlock Grid.Column="3" Text="{Binding YearText}" Style="{StaticResource InfoTextBlockStyle}" VerticalAlignment="Center" Margin="10 0 5 0"/>
+                            <TextBlock Grid.Column="3" Text="{Binding YearText}" VerticalAlignment="Center" Margin="10 0 5 0"/>
                             <ComboBox Grid.Column="4" ItemsSource="{Binding LstYearColumnChart}"
                                       SelectedItem="{Binding SelectedYearColumnChart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                      Foreground="{StaticResource TextColorPrimary}"
+                                      
                                       Height="32"
                                       VerticalContentAlignment="Center"
                                       Padding="10,0,10,0"
@@ -130,7 +99,7 @@
                         </Grid>
                         <lvc:CartesianChart Series="{Binding ChartColumnSeriesCollection}" LegendLocation="Top" Height="200">
                             <lvc:CartesianChart.AxisX>
-                                <lvc:Axis Labels="{Binding LstChartColumnLabels}" Foreground="{StaticResource TextColorPrimary}" FontWeight="SemiBold"/>
+                                <lvc:Axis Labels="{Binding LstChartColumnLabels}"  FontWeight="SemiBold"/>
                             </lvc:CartesianChart.AxisX>
                             
                         </lvc:CartesianChart>
@@ -144,7 +113,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Border Grid.Column="0" Background="{StaticResource BackgroundPrimaryColor}" CornerRadius="10" Margin="0 0 10 0" Effect="{StaticResource CardDropShadow}">
+                <Border Grid.Column="0"  CornerRadius="10" Margin="0 0 10 0" Effect="{StaticResource CardDropShadow}">
                     <StackPanel Margin="15">
                         <Grid Margin="0 0 0 10">
                             <Grid.ColumnDefinitions>
@@ -152,11 +121,11 @@
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding ChartLineText}" Style="{StaticResource TitleTextBlockStyle}" HorizontalAlignment="Left"/>
-                            <TextBlock Grid.Column="1" Text="{Binding DeviceNameText}" Style="{StaticResource InfoTextBlockStyle}" VerticalAlignment="Center" Margin="0 0 5 0"/>
+                            <TextBlock Text="{Binding ChartLineText}"  HorizontalAlignment="Left"/>
+                            <TextBlock Grid.Column="1" Text="{Binding DeviceNameText}" VerticalAlignment="Center" Margin="0 0 5 0"/>
                             <ComboBox Grid.Column="2" ItemsSource="{Binding LstDeviceChartLine}"
                                 SelectedItem="{Binding SelectedDeviceChartLine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                Foreground="{StaticResource TextColorPrimary}"
+                                
                                 DisplayMemberPath="name"
                                 SelectedValuePath="devid"
                                 Height="32"
@@ -166,14 +135,14 @@
                         </Grid>
                         <lvc:CartesianChart Series="{Binding ChartLineSeriesCollection}" LegendLocation="Right" Height="200">
                             <lvc:CartesianChart.AxisX>
-                                <lvc:Axis Labels="{Binding LstChartLineLabels}" Foreground="{StaticResource TextColorPrimary}" FontWeight="SemiBold"/>
+                                <lvc:Axis Labels="{Binding LstChartLineLabels}"  FontWeight="SemiBold"/>
                             </lvc:CartesianChart.AxisX>
                             
                         </lvc:CartesianChart>
                     </StackPanel>
                 </Border>
 
-                <Border Grid.Column="1" Background="{StaticResource BackgroundPrimaryColor}" CornerRadius="10" Margin="5 0 5 0" Effect="{StaticResource CardDropShadow}">
+                <Border Grid.Column="1"  CornerRadius="10" Margin="5 0 5 0" Effect="{StaticResource CardDropShadow}">
                     <StackPanel Margin="15">
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -183,20 +152,20 @@
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding ChartPieText}" Style="{StaticResource TitleTextBlockStyle}" Margin="0 0 0 10"/>
-                            <TextBlock Grid.Column="1" Text="{Binding MonthText}" Style="{StaticResource InfoTextBlockStyle}" VerticalAlignment="Center" Margin="0 0 5 0"/>
+                            <TextBlock Text="{Binding ChartPieText}"  Margin="0 0 0 10"/>
+                            <TextBlock Grid.Column="1" Text="{Binding MonthText}" VerticalAlignment="Center" Margin="0 0 5 0"/>
                             <ComboBox Grid.Column="2"
                                   ItemsSource="{Binding LstMonthPieChart}"
                                   SelectedItem="{Binding SelectedMonthPieChart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                  Foreground="{StaticResource TextColorPrimary}"
+                                  
                                   Height="32"
                                   VerticalContentAlignment="Center"
                                   Padding="10,0,10,0"
                                   HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
-                            <TextBlock Grid.Column="3" Text="{Binding YearText}" Style="{StaticResource InfoTextBlockStyle}" VerticalAlignment="Center" Margin="10 0 5 0"/>
+                            <TextBlock Grid.Column="3" Text="{Binding YearText}" VerticalAlignment="Center" Margin="10 0 5 0"/>
                             <ComboBox Grid.Column="4" ItemsSource="{Binding LstYearPieChart}"
                                   SelectedItem="{Binding SelectedYearPieChart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                  Foreground="{StaticResource TextColorPrimary}"
+                                  
                                   Height="32"
                                   VerticalContentAlignment="Center"
                                   Padding="10,0,10,0"
