--- a/Electric_Meter/App.xaml
+++ b/Electric_Meter/App.xaml
@@ -17,6 +17,10 @@
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
 
+            <!-- Tắt overlay Selected mặc định của WPF UI -->
+            <SolidColorBrush x:Key="SystemControlHighlightListAccentLowBrush" Color="Transparent"/>
+            <SolidColorBrush x:Key="SystemControlHighlightListAccentMediumBrush" Color="Transparent"/>
+            <SolidColorBrush x:Key="SystemControlHighlightListAccentHighBrush" Color="Transparent"/>
             <!-- Color Palette -->
             <Color x:Key="PrimaryColor">#fafafa</Color>
             <Color x:Key="AccentColor">#0a0a0a</Color>
@@ -127,7 +131,7 @@
             <Style x:Key="BaseBorderStyle" TargetType="Border">
                 <Setter Property="Background" Value="#F9F9F9"/>
                 <Setter Property="CornerRadius" Value="6"/>
-                <Setter Property="Margin" Value="10"/>
+                <Setter Property="Margin" Value="5"/>
             </Style>
             <Style x:Key="BorderTopToolbar" TargetType="Border" BasedOn="{StaticResource BaseBorderStyle}">
                 <Setter Property="Margin" Value="10"/>
@@ -139,11 +143,60 @@
             <Style x:Key="BorderContent" TargetType="Border" BasedOn="{StaticResource BaseBorderStyle}">
                 <Setter Property="Background" Value="{StaticResource PrimaryBrush}"/>
                 <Setter Property="CornerRadius" Value="6"/>
-                <Setter Property="Margin" Value="10"/>
-                <Setter Property="Padding" Value="15"/>
+                <Setter Property="Margin" Value="5"/>
+                <Setter Property="Padding" Value="5"/>
                 <Setter Property="BorderBrush" Value="#DDD"/>
                 <Setter Property="BorderThickness" Value="0.5"/>
             </Style>
+            <!-- Style DataGrid global -->
+            <Style x:Key="BaseDataGridView" TargetType="DataGrid">
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="BorderBrush" Value="#D0D7DE"/>
+                <Setter Property="Background" Value="White"/>
+
+                <Setter Property="RowBackground" Value="White"/>
+                <Setter Property="AlternatingRowBackground" Value="#FAFAFA"/>
+
+                <Setter Property="HeadersVisibility" Value="Column"/>
+                <Setter Property="ColumnHeaderHeight" Value="34"/>
+                <Setter Property="RowHeight" Value="32"/>
+
+                <Setter Property="IsReadOnly" Value="True"/>
+                <Setter Property="CanUserAddRows" Value="False"/>
+                <Setter Property="AutoGenerateColumns" Value="False"/>
+
+                <!-- Style cho Row -->
+                <Setter Property="RowStyle">
+                    <Setter.Value>
+                        <Style TargetType="DataGridRow">
+                            <Style.Triggers>
+                                <Trigger Property="IsSelected" Value="True">
+                                    <Setter Property="Background" Value="#2196F3"/>
+                                    <Setter Property="Foreground" Value="White"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Setter.Value>
+                </Setter>
+
+                <!-- Style cho Cell -->
+                <Setter Property="CellStyle">
+                    <Setter.Value>
+                        <Style TargetType="DataGridCell">
+                            <Style.Triggers>
+                                <Trigger Property="IsSelected" Value="True">
+                                    <Setter Property="Background" Value="#2196F3"/>
+                                    <Setter Property="Foreground" Value="White"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Setter.Value>
+                </Setter>
+
+            </Style>
+
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
